fixed spacing of hamburger icon

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -72,7 +72,7 @@ a:link {
 .navbarHamburgerButton {
     border: none;
     background: transparent;
-    margin-right: 1rem;
+    margin-right: 1.5rem;
     margin-left: auto;
 }
 
